<!DOCTYPE resources [<!ENTITY appname "AquilaFlashcards">]>

<resources>

    <!-- App -->
    <string name="app_name">&appname;</string>
    <string name="unexpected_error">An unexpected error occurred…</string>
    <string name="empty_field">This field cannot be empty…</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>

    <!-- App options menu -->
    <string name="options">Options</string>
    <string name="track_progress">Track progress</string>
    <string name="rate_us">Rate us</string>
    <string name="contact">Contact</string>
    <string name="email">aquilaflashcards@gmail.com</string>
    <string name="about_us">About us</string>
    <string name="app_description">Learning by heart has never been easier with the &appname; app! Memorize tricky terms with ease and have fun for free now!</string>

    <!-- SetsFragment -->
    <string name="flashcards_word_count">Memorized: %1$d/%2$d</string>
    <string name="add_new_set">Create new set</string>
    <string name="add_set">Create set</string>
    <string name="three_dots">&#8942;</string>
    <string name="flashcards_button_text">Flashcards</string>
    <string name="learn_button_text">Learn</string>
    <string name="set_deleted_toast">The set has been deleted!</string>
    <string-array name="sort_options">
        <item>Original order</item>
        <item>Reversed original order</item>
        <item>Ascending alphabetically</item>
        <item>Descending alphabetically</item>
    </string-array>
    <!-- Learn Dialog -->
    <string name="choose_learning_strategy">Please choose learning strategy</string>
    <string name="flashcards_order">Flashcards order</string>
    <string name="show_learned">Show memorized flashcards</string>
    <string name="ok">Ok</string>
    <string-array name="learn_options">
        <item>Original order</item>
        <item>Reversed original order</item>
        <item>Random order</item>
        <item>Ascending alphabetically</item>
        <item>Descending alphabetically</item>
    </string-array>
    <!-- Delete Dialog -->
    <string name="delete_set_title">Delete set</string>
    <string name="delete_set_message">Are you sure you want to delete this set?</string>
    <string name="delete_flashcard_title">Delete flashcard</string>
    <string name="delete_flashcard_message">Are you sure you want to delete this flashcard?</string>

    <!-- TrackProgressFragment -->
    <string name="learned_flashcards_title">Memorized flashcards</string>
    <string name="all_flashcards_title">All flashcards</string>
    <string name="to_learn_flashcards_title">Flashcards to memorize</string>
    <string name="unlearned_sets_title">Sets to memorize</string>
    <string name="learned_sets_title">Memorized sets</string>
    <string name="no_statistic_data">---</string>
    <string name="browse_sets">Browse sets</string>

    <!-- FlashcardsFragment -->
    <string name="add_flashcard">Add new terms</string>
    <string name="add_new_flashcard">Add new terms</string>
    <string name="flashcard_deleted_toast">The flashcard has been deleted!</string>

    <!-- AddFlashcardFragment -->
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="learned">Memorized</string>
    <string name="add">Add</string>
    <string name="flashcard_added_toast">A new term has been added!</string>
    <string name="flashcard_modified_toast">The term has been modified!</string>

    <!-- AddSetFragment -->
    <string name="set_name">Set name</string>
    <string name="set_description">Set description (optional)</string>
    <string name="modify">Modify</string>
    <string name="create">Create</string>
    <string name="set_created_toast">A new set has been created!</string>
    <string name="set_modified_toast">The set has been modified!</string>

    <!-- Item Menu -->
    <string name="edit_string">Edit</string>
    <string name="delete_string">Delete</string>

    <!-- Learn Fragment -->
    <string name="show_definition">Show the definition</string>
    <string name="no_flashcards">No flashcards to display</string>
    <string name="yes_description">Easy</string>
    <string name="medium_description">So-so</string>
    <string name="no_description">Difficult</string>
    <string name="displaying_all">All flashcards displayed</string>
    <string name="displaying_unlearned">Unmemorized flashcards displayed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>