<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.AddFlashcardFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="64dp"
        android:hint="@string/term"
        style="@style/Widget.Flashcards.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/definition_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/definition_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/definition"
        style="@style/Widget.Flashcards.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/learned">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/definition_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/learned"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="24dp"
        android:checked="false"
        android:text="@string/learned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_flashcard_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginHorizontal="8dp"
        android:padding="12dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_flashcard_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_flashcard_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_flashcard"
        android:layout_marginHorizontal="8dp"
        android:padding="12dp"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>