<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddSetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_name_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_name"
            style="@style/Widget.Flashcards.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/set_name_edit_text"
                android:maxLength="64"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/set_description_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_description"
            style="@style/Widget.Flashcards.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/set_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="192"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/cancel"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:padding="12dp"
                android:text="@string/add"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toTopOf="@id/cancel_button"
                app:layout_constraintBottom_toBottomOf="@id/cancel_button"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>